--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bing Dwen Dwen</title>
+    <title>TXL Bing Dwen Dwen</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="main">
+        <!-- <div style="
+        font-size: 14px;
+        position: relative;
+        top: -27px;
+        right: -4px;
+    ">TXL专属冰墩墩</div> -->
         <div class="body">
             <div class="face-round">
                 <div class="face">
@@ -49,7 +55,11 @@
                 <div class="right"></div>
             </div>
         </div>
-        <div class="road"></div>
+        <div class="road" style="
+        display: flex;
+        align-items: flex-end;
+        justify-content: center;
+    ">TXL</div>
     </div>
 </body>
 </html>
